--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>0.5.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
