--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 logging.level.root=OFF
 logging.level.org.springframework.web=INFO
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
